adding: prev-image, copyright, readme

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+    SPDX-License-Identifier: MIT
+    Copyright (c) 2025 Shiben Bhattacharjee
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
